--- a/index.html
+++ b/index.html
@@ -9,8 +9,39 @@
   </head>
   <body>
     <div class="container">
-      <div class="display"></div>
-      <div class="buttons"></div>
+      <div class="display">1+2</div>
+      <div class="buttons">
+        <div class="row-1">
+          <button>AC</button>
+          <button>Delete</button>
+          <button>%</button>
+          <button>/</button>
+        </div>
+        <div class="row-2">
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button>x</button>
+        </div>
+        <div class="row-3">
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>-</button>
+        </div>
+        <div class="row-4">
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button>+</button>
+        </div>
+        <div class="row-5">
+          <button>pi</button>
+          <button>0</button>
+          <button>.</button>
+          <button>=</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
