--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="display">1+2</div>
+      <div class="display">0</div>
       <div class="buttons">
         <div class="row-1">
           <button>AC</button>
