--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="display">0</div>
       <div class="buttons">
         <div class="row-1">
-          <button>AC</button>
+          <button class="clear">AC</button>
           <button>Delete</button>
           <button>%</button>
           <button>/</button>
@@ -21,7 +21,7 @@
           <button>7</button>
           <button>8</button>
           <button>9</button>
-          <button>x</button>
+          <button>*</button>
         </div>
         <div class="row-3">
           <button>4</button>
