--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <div class="row-1">
           <button class="clear">AC</button>
           <button>Delete</button>
-          <button>%</button>
-          <button>/</button>
+          <button class="remainder">%</button>
+          <button class="division">/</button>
         </div>
         <div class="row-2">
           <button class="number">7</button>
           <button class="number">8</button>
           <button class="number">9</button>
-          <button>*</button>
+          <button class="multiplication">*</button>
         </div>
         <div class="row-3">
           <button class="number">4</button>
           <button class="number">5</button>
           <button class="number">6</button>
-          <button>-</button>
+          <button class="subtraction">-</button>
         </div>
         <div class="row-4">
           <button class="number">1</button>
