Add missing class to number 0

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row-5">
           <button>pi</button>
-          <button>0</button>
+          <button class="number">0</button>
           <button>.</button>
           <button class="equal">=</button>
         </div>
