Add delete and fix numbers to 2 decimals

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="buttons">
         <div class="row-1">
           <button class="clear">AC</button>
-          <button>Delete</button>
+          <button class="delete">DEL</button>
           <button class="remainder">%</button>
           <button class="division">/</button>
         </div>
