Add pi constant and decimals

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <button class="addition">+</button>
         </div>
         <div class="row-5">
-          <button>pi</button>
+          <button class="pi">pi</button>
           <button class="number">0</button>
-          <button>.</button>
+          <button class="dot">.</button>
           <button class="equal">=</button>
         </div>
       </div>
